--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -48,7 +48,7 @@ jobs:
           name: dist-files
       - name: Output contents
         run: ls
-        name: Output filename
+      - name: Output filename
         run: echo "${{ needs.build.outputs.script-file }}"
       - name: Deploy
         run: echo "Deploying..."
